feat(application): 重构应用提示生成功能并新增工具代码生成功能
- 将 ChatMessageDTO 重命名为 MessageDTO 并移至 common 模块
- 修改 promptGenerate 接口返回类型从 Map<String, String> 改为 MessageDTO
- 更新 ApplicationPromptService 中的消息处理逻辑和流式响应
- 新增 generateCode 接口支持工具代码自动生成
- 添加 GenerateCodeDTO 数据传输对象
- 集成模型服务提供者实现流式代码生成
- 优化消息转换和参数替换逻辑